--- a/.github/workflows/spinup-destroy.yml
+++ b/.github/workflows/spinup-destroy.yml
@@ -1,4 +1,4 @@
-name: Configure Azure Environemnt
+name: Configure Azure Environment
 
 on:
   pull_request:
@@ -8,7 +8,7 @@ env:
   AZURE_RESOURCE_GROUP: cd-with-actions
   AZURE_APP_PLAN: actions-ttt-deployment
   AZURE_LOCATION: '"North Europe"'
-  AZURE_WEBAPP_NAME: justen-lyit-ttt-app
+  AZURE_WEBAPP_NAME: krsna108-ttt-app
   
 jobs:
   setup-up-azure-resources:
