--- a/.github/workflows/spinup-destroy.yml
+++ b/.github/workflows/spinup-destroy.yml
@@ -6,7 +6,7 @@ on:
     
 env:
   AZURE_RESOURCE_GROUP: cd-with-actions
-  AZURE_APP_PLAN: actions-ttt-deployment
+  AZURE_APP_PLAN: Github-Actions
   AZURE_LOCATION: '"North Europe"'
   AZURE_WEBAPP_NAME: Github-Actions
   
