--- a/.github/workflows/spinup-destroy.yml
+++ b/.github/workflows/spinup-destroy.yml
@@ -7,8 +7,8 @@ on:
 env:
   AZURE_RESOURCE_GROUP: cd-with-actions
   AZURE_APP_PLAN: actions-ttt-deployment
-  AZURE_LOCATION: '"East US"'
-  AZURE_WEBAPP_NAME: Github-Actions
+  AZURE_LOCATION: '"North Europe"'
+  AZURE_WEBAPP_NAME: justen-lyit-ttt-app
   
 jobs:
   setup-up-azure-resources:
