--- a/.github/workflows/spinup-destroy.yml
+++ b/.github/workflows/spinup-destroy.yml
@@ -5,7 +5,7 @@ on:
     types: [labeled]
     
 env:
-  AZURE_RESOURCE_GROUP: cd-with-actions
+  AZURE_RESOURCE_GROUP: lyit_lab3
   AZURE_APP_PLAN: actions-ttt-deployment
   AZURE_LOCATION: '"North Europe"'
   AZURE_WEBAPP_NAME: justen-lyit-ttt-app
